css/style.css
/* ... */
*
{
	margin                      : 0;
	padding                     : 0;
	border                      : 0;
	outline                     : 0;
	box-sizing                  : inherit;
}

abbr[title]
{
	border-bottom               : none;
	text-decoration             : underline;
	text-decoration             : underline dotted;
}

b,
strong
{
	font-weight                 : bolder;
}

button,
input,
optgroup,
select,
textarea
{
	margin                      : 0;
	font-family                 : inherit;
	font-size                   : 100%;
	line-height                 : 1.15;
}

button,
input
{
	overflow                    : visible;
}

button,
select
{
	text-transform              : none;
}

button,
[type="button"],
[type="reset"],
[type="submit"]
{
	-webkit-appearance          : button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner
{
	padding                     : 0;
	border-style                : none;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring
{
	outline                     : 1px dotted ButtonText;
}

code,
kbd,
samp
{
	font-family                 : monospace, monospace;
	font-size                   : 1em;
}

details
{
	display                     : block;
}

img
{
	display                     : block;
	max-inline-size             : 100%;
	border-style                : none;
}

legend
{
	display                     : table;
	box-sizing                  : border-box;
	max-width                   : 100%;
	padding                     : 0;
	color                       : inherit;
	white-space                 : normal;
}

main
{
	display                     : block;
}

progress
{
	vertical-align              : baseline;
}

pre
{
	font-family                 : monospace, monospace;
	font-size                   : 1em;
}

small
{
	font-size                   : 80%;
}

sub,
sup
{
	font-size                   : 75%;
	line-height                 : 0;
	position                    : relative;
	vertical-align              : baseline;
}

sub
{
	bottom                      : -0.25em;
}

sup
{
	top                         : -0.5em;
}

hr
{
	box-sizing                  : content-box;
	height                      : 0;
	overflow                    : visible;
}

::-webkit-file-upload-button
{
	-webkit-appearance          : button;
	font                        : inherit;
}

summary
{
	display                     : list-item;
}

template
{
	display                     : none;
}

textarea
{
	overflow                    : auto;
}

[hidden]
{
	display                     : none;
}

[type="checkbox"],
[type="radio"]
{
	box-sizing                  : border-box;
	padding                     : 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button
{
	height                      : auto;
}

[type="search"]
{
	-webkit-appearance          : textfield;
	outline-offset              : -2px;
}

[type="search"]::-webkit-search-decoration
{
	-webkit-appearance          : none;
}


/* Content ------------------------------------------------------------------- */

.workit-logo
{
	/*                            96px*/
	inline-size                 : 6rem;
	/*                            25px    */
	block-size                  : 1.5625rem;
	background-image            : url(../img/logo-dark.svg);
	background-size             : cover;
}

.facebook-logo
{
	background-image            : url(../img/icon-facebook.svg);
	background-size             : cover;
}

.twitter-logo
{
	/*                            1.4375rem*/
	inline-size                 : 23px;
	/*                            1.25rem*/
	block-size                  : 20px;
	background-image            : url(../img/icon-twitter.svg);
	background-size             : cover;
}

.instagram-logo
{
	background-image            : url(../img/icon-instagram.svg);
	background-size             : cover;
}


/* Typography ---------------------------------------------------------------- */

@font-face
{
	font-family                 : "Fraunces 144pt";
	src                         : url("../fonts/subset-Fraunces144pt-SemiBold.woff2") format("woff2");
	font-weight                 : 600;
	font-style                  : normal;
	font-display                : swap;
}

@font-face
{
	font-family                 : "Manrope";
	src                         : url("../fonts/subset-Manrope-Regular.woff2") format("woff2");
	font-weight                 : normal;
	font-style                  : normal;
	font-display                : swap;
}

body
{
	font-family                 : Manrope, sans-serif;
	/*                            18px   */
	font-size                   : 1.125rem;
	/*                            32px*/
	line-height                 : 1.778;
}

button
{
	font-weight                 : 700;
	/*                            13px */
	line-height                 : 0.7222;
}

button::before,
button::after
{
	content                     : "";
	display                     : table;
}

button::before
{
	margin-block-end            : -0.023em;
}

button::after
{
	margin-block-start          : 0.023em;
}

header a
{
	font-weight                 : 700;
}

h1, h2, h3,
.heading-l, .heading-m, .heading-s
{
	font-family                 : "Fraunces 144pt", serif;
	font-weight                 : 600;
}

h1, .heading-l
{
	/*                                  50px                            80px*/
	font-size                   : clamp(3.125rem, 2.4648rem + 2.8169vw, 5rem);
	line-height                 : 1;
}

h2, .heading-m
{
	/*                                  32px                        56px  */
	font-size                   : clamp(2rem, 1.4718rem + 2.2535vw, 3.5rem);
	/*                          37px*/
	line-height                 : 1.143;
}
/* ... */

